fix: remove bouncing on mobiles

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -86,8 +86,10 @@
   --home-page-icon-background-color: #2c2e30;
 }
 
+html,
 body {
-  overscroll-behavior-y: none;
+  overscroll-behavior: contain;
+  touch-action: pan-x pan-y;
 }
 
 /* CSS for endpoint and permission*/
@@ -516,7 +518,6 @@ a {
   font-weight: 500;
 }
 
-
 code {
   font-size: var(--text-emphasis-size) !important;
   border: none;
@@ -550,7 +551,8 @@ main
   font-weight: inherit;
 }
 
-main a:not(.home-line):not(.breadcrumbs__link):not(.pagination-link):hover:not(
+main
+  a:not(.home-line):not(.breadcrumbs__link):not(.pagination-link):hover:not(
     .hash-link
   ):not(.tocLink_wfFo) {
   color: var(--ifm-heading-color);
